--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "famille",
+  "name": "e-commerce",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
